Fixed chart labels that were getting clipped.

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -19,7 +19,7 @@
 
 .chart-container {
   height: 400px;
-  min-width: 600px;
+  min-width: 700px;
   width: 100%;
 }
 
